# vara-feature

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  0001-Adds-ctor-for-FMBuilder.patch  CMakeLists.txt  ConfigurationFactory_8h.html  ConfigurationFactory_8h__incl.map  ConfigurationFactory_8h__incl.md5  ConfigurationFactory_8h_source.html  Configuration_8cpp.html  Configuration_8cpp__incl.map  Configuration_8cpp__incl.md5  Configuration_8cpp_source.html  Configuration_8h.html  Configuration_8h__dep__incl.map  Configuration_8h__dep__incl.md5  Configuration_8h__incl.map  Configuration_8h__incl.md5  Configuration_8h_source.html  ConstraintBuilder_8h.html  ConstraintBuilder_8h__dep__incl.map  ConstraintBuilder_8h__dep__incl.md5  ConstraintBuilder_8h__incl.map  ConstraintBuilder_8h__incl.md5  ConstraintBuilder_8h_source.html  ConstraintParser_8h.html  ConstraintParser_8h__dep__incl.map  ConstraintParser_8h__dep__incl.md5  ConstraintParser_8h__incl.map  ConstraintParser_8h__incl.md5  ConstraintParser_8h_source.html  Constraint_8cpp.html  Constraint_8cpp__incl.map  Constraint_8cpp__incl.md5  Constraint_8cpp_source.html  Constraint_8h.html  (+830 more)
bindings/python/vara-feature/: CMakeLists.txt  pybind_Configuration.cpp  pybind_Constraint.cpp  pybind_Feature.cpp  pybind_FeatureModel.cpp  pybind_FeatureModelBuilder.cpp  pybind_FeatureModelXmlParser.cpp  pybind_FeatureModelXmlWriter.cpp  pybind_FeatureSourceRange.cpp  pybind_Init.cpp  pybind_Location.cpp  pybind_XmlParser.cpp  pybind_common.h  pybind_llvm.cpp
cmake/: FindZ3.cmake  vara_feature_macros.cmake
doc/: CMakeLists.txt  doxygen.cfg.in
docs/: CMakeLists.txt  doxygen-mainpage.dox  doxygen.cfg.in
html/: Constraint_8cpp.html  Constraint_8cpp__incl.map  Constraint_8cpp__incl.md5  Constraint_8cpp_source.html  Constraint_8h.html  Constraint_8h__incl.md5  Constraint_8h_source.html  FeatureModelBuilder_8cpp.html  FeatureModelBuilder_8cpp__incl.map  FeatureModelBuilder_8cpp__incl.md5  FeatureModelBuilder_8cpp_source.html  FeatureModelBuilder_8h.html  FeatureModelBuilder_8h__dep__incl.map  FeatureModelBuilder_8h_source.html  FeatureModelParser_8cpp.html  FeatureModelParser_8cpp__incl.map  FeatureModelParser_8cpp__incl.md5  FeatureModelParser_8cpp_source.html  FeatureModelParser_8h.html  FeatureModelParser_8h__dep__incl.map  FeatureModelParser_8h__dep__incl.md5  FeatureModelParser_8h_source.html  FeatureModelTransaction_8cpp.html  (+360 more)
lib/Configuration/: CMakeLists.txt  Configuration.cpp
lib/Feature/: CMakeLists.txt  Constraint.cpp  Feature.cpp  FeatureModel.cpp  FeatureModelBuilder.cpp  FeatureModelParser.cpp  FeatureModelTransaction.cpp  FeatureModelWriter.cpp  HelloWorld.cpp  OrderedFeatureVector.cpp  SxfmConstants.h  XmlConstants.h  XmlParser.cpp
tools/config-generator/: CMakeLists.txt  ConfigurationGenerator.cpp
tools/fm-editor/: CMakeLists.txt  FeatureAddDialog.cpp  FeatureAddDialog.h  FeatureAddDialog.ui  FeatureEdge.cpp  FeatureEdge.h  FeatureModelEditor.cpp  FeatureModelEditor.h  FeatureModelEditor.ui  FeatureModelGraph.cpp  FeatureModelGraph.h  FeatureNode.cpp  FeatureNode.h  Utils.h  main.cpp
tools/fm-editor/graph/: FeatureEdge.cpp  FeatureEdge.h  FeatureModelGraph.cpp  FeatureModelGraph.h  FeatureNode.cpp  FeatureNode.h
tools/fm-editor/tree/: FeatureTreeItem.cpp  FeatureTreeItem.h  FeatureTreeViewModel.cpp  FeatureTreeViewModel.h
tools/fm-viewer/: CMakeLists.txt  FeatureModelViewer.cpp
unittests/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
unittests/Configuration/: CMakeLists.txt  Configuration.cpp  ConfigurationOption.cpp
unittests/Feature/: BinaryFeature.cpp  CMakeLists.txt  ConstraintBuilder.cpp  ConstraintParser.cpp  Feature.cpp  FeatureModel.cpp  FeatureModelBuilder.cpp  FeatureModelParser.cpp  FeatureModelSxfm.cpp  FeatureModelTransaction.cpp  FeatureModelWriter.cpp  FeatureRevisionRange.cpp  FeatureSort.cpp  FeatureSourceRange.cpp  FeatureTreeNode.cpp  Location.cpp  NumericFeature.cpp  OrderedFeatureVector.cpp  Relationship.cpp  RootFeature.cpp  StepFunction.cpp  StepFunctionParser.cpp  UnittestHelper.h
unittests/Sampling/: BasicSamplingSetup.cpp  CMakeLists.txt  SampleSetParserTests.cpp  SampleSetWriterTests.cpp
unittests/Solver/: BasicSolverTests.cpp  CMakeLists.txt  ConfigurationFactory.cpp  LargeCaseStudyTests.cpp  RealWorldCaseStudyTests.cpp  SolverFactory.cpp  Z3Tests.cpp
unittests/Utils/: CMakeLists.txt  Result.cpp  UnittestHelper.h  VariantUtil.cpp
unittests/resources/: CMakeLists.txt  FeatureModel_v0.600.xml  sxfm_example.sxfm  test.sxfm  test.xml  test_children.xml  test_circular_parentship.xml  test_empty_exclusions.xml  test_exclude_missing_feature.xml  test_excludes.xml  test_missing_root.xml  test_name_tag_not_provided.xml  test_only_children.xml  test_out.xml  test_random_text_in_tag.xml  test_special_char_in_name.xml  test_tag_not_provided.xml  test_tags_not_closed.xml  test_wrong_optional_flag.xml
unittests/resources/csv/: configs_dune.csv
unittests/resources/sxfm/: CMakeLists.txt  sxfm_example.sxfm  test.sxfm  test_wrong_constraint_format.sxfm  test_wrong_indentation.sxfm  test_wrong_xml_format.sxfm
unittests/resources/xml/: CMakeLists.txt  error_mismatch_parent_child.xml  error_missing_child.xml  error_missing_exclude.xml  error_missing_implication.xml  error_missing_parent.xml  error_root_root.xml  test.xml  test_children.xml  test_constraints.xml  test_dune_bin.xml  test_dune_num.xml  test_dune_num_explicit.xml  test_excludes.xml  test_hipacc_bin.xml  test_hipacc_num.xml  test_hsqldb_num.xml  test_locations.xml  test_member_offset.xml  test_mismatch_parent_child.xml  test_mixed_constraints.xml  test_msmr.xml  test_non_existent_child.xml  test_non_existent_exclude.xml  test_non_existent_implication.xml  test_numbers.xml  test_only_parents.xml  test_out_of_order.xml  test_output_string.xml  test_revision_range.xml  test_root_empty_parent.xml  test_root_no_parent.xml  test_root_parent_root.xml  test_step_function.xml  test_three_optional_features.xml  test_with_whitespaces.xml  vm.dtd
unittests/resources/yml/: dune_configs.yml
(+284 files in other folders)
